# rust-monitoring-metrics

./: .gitignore  Cargo.toml  Makefile.toml  README.md  api_call.sh  docker-compose.yml
.devcontainer/: Dockerfile  devcontainer.json  docker-compose.yml
src/: main.rs
